--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
-<app-header></app-header>
+<app-header
+  (displayRecipesEvent)="showRecipes = true; showShoppingList = false"
+  (displayShoppingListEvent)="showShoppingList = true; showRecipes = false"
+></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="showRecipes"></app-recipes>
+      <app-shopping-list *ngIf="showShoppingList"></app-shopping-list>
     </div>
   </div>
 </div>
