pass data using event and property binding

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,6 +9,7 @@
     <app-recipe-item
       *ngFor="let currentRecipe of recipes"
       [recipe]="currentRecipe"
+      (recipeSelected)="onRecipeSelected($event)"
     >
     </app-recipe-item>
   </div>
