--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,16 @@
 <div class="row">
   <div class="col-xs 12">
-    <!-- <img [src]="imagePath" alt="{recipe.name}" class="img-responsive" /> -->
-    <img [src]="" alt="" class="img-responsive" />
+    <img
+      [src]="recipe.imagePath"
+      alt="{{ recipe.name }}"
+      class="img-responsive"
+    />
+    <!-- <img [src]="" alt="" class="img-responsive" /> -->
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -23,5 +27,7 @@
     </div>
   </div>
 </div>
-<div class="row"><div class="col-xs-12">Description</div></div>
-<div class="row"><div class="col-xs-12">Ingredients</div></div>
+<div class="row">
+  <div class="col-xs-12">{{ recipe.description }}</div>
+</div>
+<div class="row"><div class="col-xs-12">some ingredient</div></div>
