add parent routes

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <div>
   <a
-    href="#"
+    style="cursor: pointer"
     class="list-group-item clearfix"
     (click)="onRecipeClick()"
     name="recipe-item"
