--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,9 +1,10 @@
 <div>
   <a
+    routerLinkActive="active"
     style="cursor: pointer"
     class="list-group-item clearfix"
-    (click)="onRecipeClick()"
     name="recipe-item"
+    [routerLink]="[index]"
   >
     <div class="pull-left">
       <h4 class="list-group-item-heading">{{ recipe?.name }}</h4>
