--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,8 +7,9 @@
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item
-      *ngFor="let currentRecipe of recipes"
+      *ngFor="let currentRecipe of recipes; let i = index"
       [recipe]="currentRecipe"
+      [index]="i"
     >
     </app-recipe-item>
   </div>
