--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form #f="ngForm" (ngSubmit)="onAddItem(f)">
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
@@ -10,8 +10,8 @@
             class="form-control"
             name="name"
             ngModel
-            #nameInput="ngModel"
-          />
+            required
+          >
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
@@ -21,27 +21,23 @@
             class="form-control"
             name="amount"
             ngModel
-            #amountInput="ngModel"
-          />
+            required
+            pattern="^[1-9]+[0-9]*$"
+          >
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12 form-group">
-          <button class="btn btn-success" type="submit">Add</button>
+        <div class="col-xs-12">
+          <button
+            class="btn btn-success"
+            type="submit"
+            [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add' }}</button>
           <button
             class="btn btn-danger"
             type="button"
-            (click)="onDelete($event)"
-          >
-            Delete
-          </button>
-          <button
-            class="btn btn-primary"
-            type="button"
-            (click)="onClear($event)"
-          >
-            Clear
-          </button>
+            (click)="onDelete()"
+            *ngIf="editMode">Delete</button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
